fix: handling touches on mobile devices

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,7 +23,7 @@ body {
 }
 
 * {
-  @apply font-raleway text-primary;
+  @apply font-raleway text-primary select-none;
 }
 
 .title {
